# appinterfaceviewer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/dao/: mod.rs
src/errors/: app_error.rs
src/graphs/: routes.rs
src/models/: app_category.rs  app_connect_info.rs  app_info.rs  appdata.rs  com_method_info.rs  com_method_type.rs  mod.rs
statics/: index.html
