[package]
name = "appinterfaceviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
calamine = "0.25"
log = "0.4"
petgraph = "0.6"
pretty_env_logger = "0.5"
logtest = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.8" , features = ["sqlite","runtime-tokio-rustls"]}
